# brightness-monitor

./: .gitignore  .gitmodules  CLAUDE.md  README.md  THIRD-PARTY-NOTICE.md  meson.build
.github/ISSUE_TEMPLATE/: release.md  release.yml
.github/workflows/: claude-code-review.yml
src/: vcnl4040.hpp
tests/: test_main.cpp  test_vcnl4040.cpp
